--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ svg.line, svg .line{fill:none!important;stroke:#fff;stroke-linecap:round;stroke-
     <!--[ Author Description ]-->
   
         <p>hey 👋 I'm gamerxyt an boy who just lost in online world and now trying to fight with all the Problem's that coming in my life and trying to learn new new things !</b></p>
-    <p>you can found all my work's and social below ! ✨</b></p>
+  </br> <p>you can found all my work's and social below ! ✨</b></p>
       
     <div class='athrBtn'>
      
